src/objects/CheckBox__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CheckBox</relationshipLabel>
        <relationshipName>CheckBox</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Check_required_YES_NO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check required YES / NO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rectification_if_Any_required__c</fullName>
        <label>Rectification if Any required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Description__c</fullName>
        <label>Test Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Results__c</fullName>
        <label>Test/Results</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>CheckBox</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Check Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CheckBox</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>